# pay-per-weigh

./: .clang-fomat  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  build.py  build.sh  main.cpp  run.sh  toolchain-aarch64.cmake
deprecated/: CMakeLists.txt  Dockerfile  README.md  Types.hpp  build.sh
include/: API.hpp  Application.hpp  Client.hpp  Controller.hpp  Device.hpp  GraphicSdlDefines.hpp  GraphicTypes.hpp  Graphics.hpp  States.hpp
include/RasbPi/: Camera.hpp  Device.hpp  Gpio.hpp
include/SDL/: Events.hpp  Graphics.hpp  Textures.hpp  Types.hpp  WindowRenderer.hpp
include/deprecated/: Graphics.hpp
src/: Application.cpp  CMakeLists.txt  Client.cpp  Device.cpp  Graphics.cpp
src/RasbPi/: Camera.cpp  Device.cpp  Gpio.cpp
src/SDL/: Events.cpp  Graphics.cpp  Textures.cpp  WindowRenderer.cpp
src/deprecated/: Graphics.cpp
test/: Makefile  test.cpp
